# RepTrack

./: .actrc  .clocignore  .gitignore  .megaignore  .prettierignore  PROJECT_OVERVIEW.md  README.md  agent-browser.json  package-lock.json  package.json  pnpm-lock.yaml
server/: .gitignore  .megaignore  Dockerfile  conftest.py  makefile  pyproject.toml  pytest.ini  ruff.toml
server/app/: __init__.py  main.py
server/app/api/: router.py
server/app/api/endpoints/: access_request.py  admin.py  auth.py  exercise.py  feedback.py  health.py  muscle_group.py  search.py  set.py  user.py  workout.py  workout_exercise.py
server/app/core/: config.py  database.py  dependencies.py  handlers.py  logging.py  security.py
server/app/migrations/: env.py  script.py.mako
server/app/migrations/versions/: 2025_12_12_1847-1e5e7084d968_create_user_table.py  2025_12_13_0947-1eac280a80f9_update_user_table_create_other_tables.py  2025_12_13_1016-c97f0fb64caa_seed_muscle_groups.py  2025_12_13_2118-e42a259d7b17_allow_user_generated_exercises.py  2025_12_15_1709-1e1a6b37847d_update_models_for_auth.py  2025_12_22_1054-b38ada12f56b_seed_admin_user.py  2026_01_21_2022-79347a71235f_create_feedback_table.py  2026_01_22_1012-10750c61592f_update_feedback_table_columms.py  2026_01_23_1247-5460f1eac74c_remove_feedback_table_defaults.py  2026_01_30_1200-556de9726319_update_registration_token_columns.py  2026_01_30_1854-1396f3316b15_add_expires_at_default.py  2026_02_09_0941-1b384d4d04c8_create_password_reset_token_table.py  2026_02_09_1545-77e3eb282239_add_token_prefix_columns.py  2026_03_11_1120-9b0d6eab4c1f_fix_muscle_groups_id_sequence.py  2026_03_11_1559-ce0019043daf_add_updated_at_column.py  2026_03_11_1614-1d1475c06895_fix_unique_constraint.py  2026_03_16_0438-3fd5430b243e_reseed_muscle_groups.py  2026_03_22_2323-315bd7d1904a_add_set_unit_enum.py  2026_03_27_0951-95ee94cb9cfc_seed_lower_body_exercises.py  2026_03_27_1021-4f30fca6e7aa_update_muscle_group_descriptions.py  2026_03_27_2337-e87490ac7ad5_change_exercise_name_to_case_insensitive.py  2026_04_05_1352-afc6f273d43c_add_build_column.py
server/app/models/: enums.py  errors.py
server/app/models/database/: access_request.py  exercise.py  exercise_muscle_group.py  feedback.py  muscle_group.py  password_reset_token.py  registration_token.py  set.py  user.py  workout.py  workout_exercise.py
server/app/models/schemas/: auth.py  config.py  exercise.py  feedback.py  muscle_group.py  pydantic_json.py  search.py  set.py  types.py  workout.py  workout_exercise.py
server/app/scripts/: reindex_meilisearch.py
server/app/services/: access_request.py  admin.py  auth.py  email.py  exercise.py  feedback.py  github.py  muscle_group.py  search.py  set.py  storage.py  token.py  user.py  workout.py  workout_exercise.py
server/app/services/queries/: access_request.py  exercise.py  muscle_group.py  set.py  token.py  user.py  workout.py  workout_exercise.py
server/app/services/utilities/: queries.py  (+1 more)
server/app/tests/: test_create_app.py  test_main.py
(+455 files in other folders)
