[project]
name = "server"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "aiosmtplib>=5.0.0",
    "alembic[tz]>=1.17.2",
    "asyncpg>=0.31.0",
    "fastapi-swagger-dark>=0.0.9",
    "fastapi[standard]>=0.124.4",
    "meilisearch>=0.40.0",
    "meilisearch-python-sdk>=7.1.1",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.2.1",
    "python-json-logger>=4.0.0",
    "sqlalchemy>=2.0.45",
]

[dependency-groups]
dev = [
    "greenlet>=3.3.0",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.9",
    "testcontainers>=4.13.3",
    "types-pyjwt>=1.7.1",
]

[tool.pyright]
typeCheckingMode = "strict"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"

[tool.coverage.run]
branch = true
source = ["app"]
omit = ["app/migrations/*", "app/tests/*", "conftest.py"]

[tool.coverage.report]
show_missing = true

[tool.coverage.html]
directory = "htmlcov"
