[project]
name = "server"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "aiosmtplib>=5.1.0",
    "alembic[tz]>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi-swagger-dark>=0.0.9",
    "fastapi[standard]>=0.124.4",
    "httpx>=0.28.1",
    "meilisearch-python-sdk>=7.1.2",
    "pwdlib[argon2]>=0.3.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.12.1",
    "python-dotenv>=1.2.2",
    "python-json-logger>=4.1.0",
    "sqlalchemy>=2.0.48",
    "starlette>=1.0.0",
]

[dependency-groups]
dev = [
    "deptry>=0.25.1",
    "greenlet>=3.3.2",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.8",
    "testcontainers>=4.14.2",
    "types-pyjwt>=1.7.1",
]

[tool.pyright]
typeCheckingMode = "strict"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"

[tool.coverage.run]
branch = true
source = ["app"]
omit = ["app/migrations/*", "app/scripts/*", "app/tests/*", "conftest.py"]

[tool.coverage.report]
show_missing = true

[tool.coverage.html]
directory = "htmlcov"

[tool.deptry]
exclude = ["app/tests/**", ".venv/"]

[tool.deptry.per_rule_ignores]
DEP002 = ["asyncpg"]
